--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BesinEkleActivity"></activity>
+        <activity android:name=".ResimCekActivity"></activity>
+        <activity android:name=".BesinEkleActivity" />
         <activity
             android:name=".SearchActivity"
             android:theme="@style/AppTheme.NoActionBar" />
